# tripsphere

./: .gitignore  ruff.toml
contracts/protobuf/: itinerary.proto
contracts/protobuf/tripsphere/itinerary/: metadata.proto
trip-itinerary-service/: Dockerfile  README.md  pyproject.toml
trip-itinerary-service/libs/tripsphere/: .gitignore  README.md  pyproject.toml
trip-itinerary-service/src/itinerary/: server.py
trip-itinerary-service/src/itinerary/protos/: itinerary_pb2.py  itinerary_pb2.pyi  itinerary_pb2_grpc.py  itinerary_pb2_grpc.pyi
trip-itinerary-service/src/itinerary/services/: metadata.py
